--- a/src/index.html
+++ b/src/index.html
@@ -14,3 +14,5 @@
   <app-root></app-root>
 </body>
 </html>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
